boulder/boulder/tests/compile_fail/intrinsics/to_bytes/arg_less.bo
# 1 parameter but received 0
# (5:

fn test() -> u8 {
    to_bytes().a
}